fixed mobile horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ footer {
     align-items: start;
     align-content: space-around;
     gap: 25px;
-    min-width: 400px;
+    min-width: 300px;
 }
 
 .img-container {
@@ -146,7 +146,7 @@ footer {
     flex: 1;
     width: 100%;
     height: 320px;
-    min-width: 400px;
+    min-width: 300px;
 
 }
 
